--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
     <div class="black-sidebar"></div>
     <div class="sidebar">
         <h2>Jia Chen</h2>
-        <img src="../jiachen.github.io/1.jpg" alt="Your Photo">
+        <img src="./1.jpg" alt="Your Photo">
         <a href="mailto:chenj674@mcmaster.ca"><i class="fas fa-address-card"></i> chenj674@mcmaster.ca</a>
         <a href="https://github.com/Krishlo-Chen" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         <!--            <a href="https://www.linkedin.com/in/gengyisun/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>-->
         <a href="https://scholar.google.ca/citations?user=hONj9eIAAAAJ&hl=en" target="_blank"><i
                 class="fas fa-graduation-cap"></i> Google Scholar</a>
-        <a href="../jiachen.github.io/Jia_Chen.pdf" target="_blank"><i class="fas fa-file-pdf"></i> My CV</a>
+        <a href="./Jia_Chen.pdf" target="_blank"><i class="fas fa-file-pdf"></i> My CV</a>
         <a>&#x270D My name: 陈嘉</a>
     </div>
     <div class="content">
@@ -179,7 +179,7 @@
         <ul>
             <li>
                 <div class="publication-item">
-                    <img src="../jiachen.github.io/overview.png" alt="Publication Image" class="publication-image">
+                    <img src="./overview.png" alt="Publication Image" class="publication-image">
                     <div class="publication-content">
 
                         <strong> Masked Deconstructed Diffusion for 3D Human Motion Generation from Text </strong><br><br>
@@ -198,7 +198,7 @@
         <ul>
             <li>
                 <div class="publication-item">
-                    <img src="../jiachen.github.io/img_1.png" alt="Publication Image" class="publication-image">
+                    <img src="./img_1.png" alt="Publication Image" class="publication-image">
                     <div class="publication-content">
 
                         <strong>Gated three-tower transformer for text-driven stock market prediction</strong><br><br>
