--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <b> Jia</b> Chen, Fangze Liu, Yingying Wang.<br><br>
 
 
-                        <a href="https://aixvr.tecnico.ulisboa.pt/" target="_blank">IEEE AIxVR 2025</a> (Under Review)
+                        <a href="https://aixvr.tecnico.ulisboa.pt/" target="_blank">IEEE AIxVR 2025</a> (Accepted)
                         <a href="https://krishlo-chen.github.io/MDD/" target="_blank">[Webpage]</a>
 
                     </div>
